[package]
name = "torch"
description = "Torrent file checker"
version = "0.1.0"
authors = ["Abusenet <abusenet@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "^0.2.3"
serde_bytes = "0.11"
wild = "2.0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
